--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,50 +1,53 @@
-//BINDS PARA O CSGO
-//Comandos para movimentação
+//Binds to CS:GO
 
-//Comandos de iteração
-bind    "mouse1"        "+attack"
-bind    "mouse2"        "+attack2"
-bind    "r"             "+reload"
-bind    "space"         "+jump"
+//Base commands
+bind "mouse1" "+attack" // fire weapon
+bind "mouse2" "+attack2" // gun scope and stronger stab
+bind "r" "+reload" // reaload weapon
+bind "space" "+jump" // jump
 
-//Binds para compra de armas
-bind 	"F1" 			"buy fiveseven; buy tec9;"          //pistols
-bind 	"F2"			"buy ak47; buy m4a1;"               //fuzil
-Bind 	"F3"			"buy galilar; buy famas;"           //fuzil segundaria
-bind 	"F4"			"buy awp;"                          //Rifle de precisão
-bind 	"F5" 			"buy deagle"                         //desert eagle
-bind  "F6"      "buy hegrenade;buy incgrenade; buy molotov;buy flashbang;buy smokegrenade"  //Comprar todas as granadas
-bind 	"kp_end" 		"buy hegrenade;"                    //Granada HE
-bind 	"kp_downarrow" 	"buy incgrenade; buy molotov;"      //Granada incendiaria
-bind 	"kp_leftarrow" 	"buy flashbang;"                    //Granada flash
-bind 	"kp_5" 			"buy smokegrenade;"                 //Granada smoke
-bind 	"kp_home" 		"buy defuser;"                      //kit de defuser
-bind 	"kp_pgup" 		"buy vesthelm; buy vest;"           //colete com capacete
+// Base commands to weapon
+bind "x" "slot1" // take primary weapon
+bind "4" "slot2" // take segundary weapon
+bind "z" "use weapon_knife" // equip knife
+bind "3" "slot5" // equip C4
 
-//Binds para usar alguma arma 
-bind    "e" "use weapon_flashbang" //pegar flash
-bind    "g" "use weapon_hegrenade" //pegar HE
-bind    "t" "use weapon_incgrenade; use weapon_molotov" //pegar incendiaria
-bind    "z" "use weapon_decoy" //pegar decoy
-bind    "v" "use weapon_smokegrenade //pegar smoke
-bind    "z"	"use weapon_knife" // equip knife
-bind    "" "+lookatweapon" //olhar para a arma
-bind    "x" "use weapon_secondary"
+//Binds to buy weapon
+bind 	"F1" "buy fiveseven; buy tec9;" //pistols
+bind 	"F2" "buy ak47; buy m4a1;" //rifle
+Bind 	"F3" "buy galilar; buy famas;" //segundary rifle
+bind 	"F4" "buy awp;" // Sniper
+bind 	"F5" "buy deagle" // desert Eagle
+bind  "F6" "buy hegrenade;buy incgrenade; buy molotov;buy flashbang;buy smokegrenade"  // buy to all grenades (molotv, smoke, flash and HE)
+bind 	"kp_end" "buy hegrenade;" // HE grenade
+bind 	"kp_downarrow" "buy incgrenade; buy molotov;" // incendiary grenade
+bind 	"kp_leftarrow" "buy flashbang;" // flash grenade
+bind 	"kp_5" "buy smokegrenade;" // smoke grenade
+bind 	"kp_home" "buy defuser;" // defuser kit
+bind 	"kp_pgup" "buy vesthelm; buy vest;" // vest
+
+//equip weapon
+bind "e" "use weapon_flashbang" // equip flash
+bind "g" "use weapon_hegrenade" // equip HE
+bind "t" "use weapon_incgrenade; use weapon_molotov" // equipe incendiary
+//bind "z" "use weapon_decoy" // equip decoy
+bind "v" "use weapon_smokegrenade" //pegar smoke
+//bind "" "+lookatweapon" //olhar para a arma
 
 //Binds for basic manual commands
-bind    "del" "disconect"
-bind    "uparrow" "toggle voice_enable" //1 activates voice in the game. 0 disables
-bind    "leftarrow" "toggle cl_righthand " //change the side that shows the gun
-bind    "kp_minus" "toggle volume 1, 0.5, 0" //altera o volume nesses comandos
-bind    "k" "+voicerecord" // activate the microphone in the game
-bind    "," "toggle cl_drawhud" //Ativa e desativa a hud no jogo
-bind    "," "+cl_show_team_equipment"
-bind    "." "exec treino"
+bind "del" "disconect"
+bind "uparrow" "toggle voice_enable" //1 activates voice in the game. 0 disables
+bind "leftarrow" "toggle cl_righthand " //change the side that shows the gun
+bind "kp_minus" "toggle volume 1, 0.5, 0" //altera o volume nesses comandos
+bind "k" "+voicerecord" // activate the microphone in the game
+bind "," "toggle cl_drawhud" //Ativa e desativa a hud no jogo
+//bind "," "+cl_show_team_equipment"
+bind "." "exec treino"
 
 // messages to know that some commands have been executed
 
 //Basic automatic commands
-sensitivity "2,14" 	 	//  
+sensitivity "2,14" 	 	// my mouse sensitivity
 fps_max_menu "61"		// maximum fps in the game menu
 fps_max "300"		// maximum fps in the game 
 cl_autowepswitch "0" 		// not to equip the weapon automatically
@@ -85,6 +88,20 @@ cl_crosshairstyle "4"
 cl_crosshairthickness "0.900000"
 cl_crosshairusealpha "1"
 cl_fixedcrosshairgap "3.000000"
+
+// position to weapon
+cl_viewmodel_shift_left_amt "1.5"
+cl_viewmodel_shift_right_amt "0.75"
+viewmodel_fov "68"
+viewmodel_offset_x "2.5"
+viewmodel_offset_y "2.0"
+viewmodel_offset_z "-2.0"
+viewmodel_presetpos "0"
+viewmodel_recoil "1.0"
+cl_bob_lower_amt "21"
+cl_bobamt_lat "0.33"
+cl_bobamt_vert "0.14"
+cl_bobcycle "0.98"
 
 // information to display on the screen (fps, tick, ping)
 bind "downarrow"	"toggle net_graph" // enables and disables the presentation of information
