--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,7 +1,7 @@
 //Binds to CS:GO
 
 //Base commands
-bind "mouse1" "+attack" // fire weapon
+bind "mouse1" "+attack;r_cleardecals " // fire weapon
 bind "mouse2" "+attack2" // gun scope and stronger stab
 bind "r" "+reload" // reaload weapon
 bind "space" "+jump" // jump
@@ -18,13 +18,13 @@ bind 	"F2" "buy ak47; buy m4a1;" //rifle
 Bind 	"F3" "buy galilar; buy famas;" //segundary rifle
 bind 	"F4" "buy awp;" // Sniper
 bind 	"F5" "buy deagle" // desert Eagle
-bind  "F6" "buy hegrenade;buy incgrenade; buy molotov;buy flashbang;buy smokegrenade"  // buy to all grenades (molotv, smoke, flash and HE)
-bind 	"kp_end" "buy hegrenade;" // HE grenade
-bind 	"kp_downarrow" "buy incgrenade; buy molotov;" // incendiary grenade
-bind 	"kp_leftarrow" "buy flashbang;" // flash grenade
-bind 	"kp_5" "buy smokegrenade;" // smoke grenade
-bind 	"kp_home" "buy defuser;" // defuser kit
-bind 	"kp_pgup" "buy vesthelm; buy vest;" // vest
+bind  "9" "buy hegrenade;buy incgrenade; buy molotov;buy flashbang;buy smokegrenade"  // buy to all grenades (molotv, smoke, flash and HE)
+bind 	"5" "buy hegrenade;" // HE grenade
+bind 	"6" "buy incgrenade; buy molotov;" // incendiary grenade
+bind 	"7" "buy flashbang;" // flash grenade
+bind 	"8" "buy smokegrenade;" // smoke grenade
+bind 	"-" "buy defuser;" // defuser kit
+bind 	"0" "buy vesthelm; buy vest;" // vest
 
 //equip weapon
 bind "e" "use weapon_flashbang" // equip flash
